--- a/scss/pirateborg/_item-list.scss
+++ b/scss/pirateborg/_item-list.scss
@@ -27,16 +27,19 @@
       min-height: 30px;
       line-height: 24px;
       padding: 8px;
-      border-bottom: 1px solid #333;
+      border-bottom: 2px groove var(--light-border-color);
       align-items: center;
       gap: 8px;
 
       &:first-of-type {
-        border-top: 1px solid #333;
+        border-top: 2px groove var(--light-border-color);
       }
 
       img {
         flex: 0 0 24px;
+        background: black;
+        padding: 2px;
+        border-radius: 4px;        
       }
 
       &.item-container-item {
