--- a/scss/skins/mb/content.min.scss
+++ b/scss/skins/mb/content.min.scss
@@ -164,8 +164,8 @@ pre[class*="language-"] {
   cursor: help;
 }
 .mce-content-body {
-  color: white;
-  background-color: black;
+  color: black;
+  background-color: transparent;
   font-family: "Alegreya";
   overflow-wrap: break-word;
   word-wrap: break-word;
