--- a/scss/pirateborg/_character-sheet.scss
+++ b/scss/pirateborg/_character-sheet.scss
@@ -9,6 +9,8 @@
         .header-col1 {
           flex: 0 0 200px;
           padding: 0;
+          margin-right: 8px;
+          line-height: 0;
         }
 
         .header-col2 {
@@ -26,12 +28,13 @@
           flex: 0 0 120px;
           display: flex;
           flex-direction: column;
-          gap: 11px;
+          gap: 10px;
         }
 
         .profile-img {
           height: 200px;
           width: 200px;
+          border-radius: 24px;
         }
 
         .name-row {
@@ -87,7 +90,7 @@
 
         .luck-row {
           display: flex;
-          margin-bottom: 12px;
+          margin-bottom: 8px;
           align-items: center;
           gap: 4px;
 
@@ -121,7 +124,7 @@
           font-size: 16px;
           margin-left: 5px;
           display: block;
-          padding-top: 4px;
+          padding-top: 2px;
         }
 
         .ability-input {
@@ -135,6 +138,7 @@
           color: var(--foreground-color);
           font-weight: 600;
           padding-bottom: 4px;
+          border-radius: 4px;
         }
       }
 
