--- a/scss/pirateborg/_item-sheet.scss
+++ b/scss/pirateborg/_item-sheet.scss
@@ -13,6 +13,7 @@
         .profile-img {
           height: 150px;
           width: 150px;
+          border-radius: 24px;
         }
 
         .item-name input[type="text"] {
