--- a/scss/pirateborg/_pirateborg.scss
+++ b/scss/pirateborg/_pirateborg.scss
@@ -9,19 +9,18 @@
   }
 
   ::-webkit-scrollbar-thumb {
-    background: darkgray;
+    background: var(--highlight-background-color);
     border: 1px solid lightgray;
   }
 
   ::selection {
     background: var(--highlight-background-color);
-    color: var(--background-color);
   }
 
   select {
     height: 27px;
     background: rgba(0, 0, 0, 0.05);
-    border: 1px solid #333;
+    border: 2px groove var(--light-border-color);
     border-radius: 0px;
     padding: 0 3px;
     text-overflow: ellipsis;
@@ -36,11 +35,6 @@
       height: auto;
       padding: 3px;
     }
-
-    > option {
-      background-color: var(--background-color) !important;
-      color: var(--foreground-color) !important;
-    }
   }
 
   .editor,
@@ -48,9 +42,13 @@
     height: 100%;
   }
 
+  .editor-content {
+    padding: 8px;
+  }
+
   .button {
-    background: var(--button-color);
-    color: var(--background-color);
+    background: var(--button-background);
+    color: var(--button-color);
     font-family: var(--button-font);
     border: none;
     border-radius: 24px;
@@ -58,6 +56,8 @@
     width: auto;
     padding: 0 16px;
     font-weight: 500;
+    line-height: 24px;
+    padding-top: 1px;
   }
 }
 
