--- a/templates/chat/attack-roll-card.html
+++ b/templates/chat/attack-roll-card.html
@@ -8,6 +8,9 @@
     <span class="item-name">{{item.name}}</span>
   </div>
   {{/each}}
+  <div class="outcome-text">
+    <span class="attack-outcome">{{attackOutcome}}</span>
+  </div>
   <div class="attack-roll">
     <div class="roll-title">
       <span
@@ -19,9 +22,11 @@
       <span>{{xtotal attackRoll}}</span>
     </div>
   </div>
+  {{#if takeDamage}}
   <div class="outcome-text">
-    <span class="attack-outcome">{{attackOutcome}}</span>
+    <span class="take-damage">{{takeDamage}}</span>
   </div>
+  {{/if}}
   {{#if damageRoll}}
   <div class="damage-roll">
     <div class="roll-title">
@@ -39,10 +44,6 @@
     <div class="roll-result">
       <span>{{xtotal targetArmorRoll}}</span>
     </div>
-  </div>
-  {{/if}} {{#if takeDamage}}
-  <div class="outcome-text">
-    <span class="take-damage">{{takeDamage}}</span>
   </div>
   {{/if}}
 </form>
