--- a/templates/chat/outcome-roll-card.html
+++ b/templates/chat/outcome-roll-card.html
@@ -1,16 +1,14 @@
 <form class="roll-card">
   <div class="card-title">{{cardTitle}}</div>
-  <div class="test-roll">
+  <div class="test-roll">    
+    <div class="outcome-text">
+      <span class="attack-outcome">{{wieldOutcome}}</span>
+    </div>      
     <div class="roll-title">
       <span>{{rollFormula}}</span>
     </div>
     <div class="roll-result">
       <span>{{xtotal roll}}</span>
     </div>
-    {{#if outcomeText}}
-    <div class="outcome-text">
-      <span class="take-damage">{{outcomeText}}</span>
-    </div>
-    {{/if}}
   </div>
 </form>
