--- a/scss/pirateborg/_root.scss
+++ b/scss/pirateborg/_root.scss
@@ -20,6 +20,7 @@
   --sidebar-tab-color: #FFFFFF;
 
   --light-border-color: #f6dec2;
+  --dark-border-color: #a29280;
 
   --sidebar-background: var(--window-background);
   --sidebar-color: #000000;
