--- a/css/pirateborg.css
+++ b/css/pirateborg.css
@@ -13,6 +13,7 @@
   --sidebar-tab-background: #000000;
   --sidebar-tab-color: #FFFFFF;
   --light-border-color: #f6dec2;
+  --dark-border-color: #a29280;
   --sidebar-background: var(--window-background);
   --sidebar-color: #000000;
   --button-background: #000000;
@@ -210,26 +211,36 @@
   border-top: none;
   border-bottom: none;
   padding: 0;
-  margin: 8px 16px 8px 16px;
+  margin: 0px;
+}
+.pirateborg.sheet .sheet-tabs .spacer {
+  border-bottom: 1px solid var(--dark-border-color);
+  display: block;
+  padding-left: 16px;
 }
 .pirateborg.sheet .sheet-tabs .item {
   font-family: var(--h2-font);
   font-size: 22px;
-  height: 30px;
-  line-height: 32px;
+  height: 34px;
+  line-height: 34px;
   width: 100%;
-  border-radius: 16px;
   white-space: nowrap;
   padding-left: 16px;
   padding-right: 16px;
+  border: 1px solid transparent;
+  border-bottom: 1px solid var(--dark-border-color);
 }
 .pirateborg.sheet .sheet-tabs .item:hover {
   text-shadow: 0 0 16px var(--highlight-background-color);
 }
 .pirateborg.sheet .sheet-tabs .item.active {
   text-shadow: none;
-  background: var(--highlight-background-color);
-  color: var(--highlight-foreground-color);
+  border: 1px solid var(--dark-border-color);
+  border-bottom: 0;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  background: rgba(255, 255, 255, 0.2);
+  border-bottom: 0;
 }
 .pirateborg .sheet-body {
   overflow: hidden;
@@ -238,6 +249,7 @@
   height: 100%;
   overflow-y: auto;
   padding: 16px 16px 16px 16px;
+  background: rgba(255, 255, 255, 0.2);
 }
 .pirateborg.sheet .sheet-body .form-group {
   margin-bottom: 8px;
@@ -772,6 +784,14 @@
   flex: 0 0 35px;
   margin-bottom: 10px;
 }
+.pirateborg.sheet.actor.creature .sheet-header .buttons-row {
+  display: flex;
+  justify-content: flex-start;
+  gap: 8px;
+}
+.pirateborg.sheet.actor.creature .sheet-header .buttons-row button {
+  width: auto;
+}
 
 .pirateborg.sheet.item .sheet-header {
   margin-top: 0;
@@ -887,7 +907,6 @@ form button {
   padding-top: 1px;
   cursor: pointer;
   height: 28px;
-  width: auto;
 }
 form button:hover {
   box-shadow: 0 0 10px var(--highlight-background-color);
