--- a/scss/pirateborg/_sheet.scss
+++ b/scss/pirateborg/_sheet.scss
@@ -97,18 +97,25 @@
       border-top: none;
       border-bottom: none;
       padding: 0;
-      margin: 8px 16px 8px 16px;
+      margin: 0px;
+
+      .spacer {
+        border-bottom: 1px solid var(--dark-border-color);
+        display: block;
+        padding-left: 16px;
+      }
 
       .item {
         font-family: var(--h2-font);
         font-size: 22px;
-        height: 30px;
-        line-height: 32px;
+        height: 34px;
+        line-height: 34px;
         width: 100%;
-        border-radius: 16px;
         white-space: nowrap;
         padding-left: 16px;
         padding-right: 16px;
+        border: 1px solid transparent;
+        border-bottom: 1px solid var(--dark-border-color);
 
         &:hover {
           text-shadow: 0 0 16px var(--highlight-background-color);
@@ -116,8 +123,12 @@
 
         &.active {
           text-shadow: none;
-          background: var(--highlight-background-color);
-          color: var(--highlight-foreground-color);
+          border: 1px solid var(--dark-border-color);
+          border-bottom: 0;
+          border-top-left-radius: 16px;
+          border-top-right-radius: 16px;
+          background: rgba(255, 255, 255, 0.20);
+          border-bottom: 0;
         }
       }
     }
@@ -130,6 +141,7 @@
       height: 100%;
       overflow-y: auto;
       padding: 16px 16px 16px 16px; 
+      background: rgba(255, 255, 255, 0.2);
     }
   }
 
