--- a/templates/actor/character-sheet.html
+++ b/templates/actor/character-sheet.html
@@ -158,11 +158,13 @@
 
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
+    <span class="spacer"></span>
     <a class="item" data-tab="combat">{{ localize 'PB.TabCombat' }}</a>
     <a class="item" data-tab="powers">{{ localize 'PB.Powers' }}</a>    
     <a class="item" data-tab="equipment">{{ localize 'PB.TabEquipment' }}</a>    
     <a class="item" data-tab="features">{{ localize 'PB.TabFeatures' }}</a>
     <a class="item" data-tab="history">{{ localize 'PB.TabHistory' }}</a>    
+    <span class="spacer"></span>
   </nav>
 
   {{!-- Sheet Body --}}
