--- a/templates/actor/creature-sheet.html
+++ b/templates/actor/creature-sheet.html
@@ -51,10 +51,12 @@
 
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
+    <span class="spacer"></span>
     <a class="item" data-tab="details">{{ localize "PB.TabDetails" }}</a>
     <a class="item" data-tab="description"
       >{{ localize "PB.TabDescription" }}</a
     >
+    <span class="spacer"></span>
   </nav>
 
   {{!-- Sheet Body --}}
