--- a/templates/item/background-sheet.html
+++ b/templates/item/background-sheet.html
@@ -21,10 +21,12 @@
 
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
+    <span class="spacer"></span>
     <a class="item" data-tab="description"
       >{{ localize "PB.TabDescription" }}</a
     >
     <a class="item" data-tab="details">{{ localize "PB.TabDetails" }}</a>
+    <span class="spacer"></span>
   </nav>
 
   {{!-- Sheet Body --}}
@@ -54,7 +56,7 @@
         <label>{{ localize "PB.StartingBonusItems" }}:</label>
         <textarea name="data.startingBonusItems" placeholder="compendium;item" rows="4">{{data.data.startingBonusItems}}</textarea>
       </div>
-      
+
     </div>
   </section>
 </form>
