--- a/templates/item/weapon-sheet.html
+++ b/templates/item/weapon-sheet.html
@@ -24,10 +24,12 @@
 
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
+    <span class="spacer"></span>
     <a class="item" data-tab="description"
       >{{ localize "PB.TabDescription" }}</a
     >
     <a class="item" data-tab="details">{{ localize "PB.TabDetails" }}</a>
+    <span class="spacer"></span>
   </nav>
 
   {{!-- Sheet Body --}}
